CSS, Index, Tips

--- a/css/polarsparc-v2.4.css
+++ b/css/polarsparc-v2.4.css
@@ -1,8 +1,8 @@
 /* ----- Style Sheet for PolarSPARC ----- */
-/* ----- Version:       2.2         ----- */
+/* ----- Version:       2.4         ----- */
 /* ----- Author:        Bhaskar S   ----- */
 /* ----- Date:          01/01/2023  ----- */
-/* ----- Last Modified: 01/01/2023  ----- */
+/* ----- Last Modified: 08/01/2025  ----- */
 
 /* ============================================================================================== */
 
@@ -24,6 +24,10 @@
     --gen_color_1: #F2D53C;
     --gen_color_2: #B73225;
     --gen_color_3: #FCEED1;
+
+    --tips_color_0: #682BD5;
+    --tips_color_1: #A37CF0;
+    --tips_color_2: #6C6C6C;
 }
 
 /* ----- Paragraph Block ----- */
@@ -920,6 +924,131 @@
     margin-right: auto;
     text-align: center;
     width: 10%;
+}
+
+/* ============================================================================================== */
+
+/* ----- Purple Color (Tips) ----- */
+
+/* ----- Tips Home Block(s) ----- */
+#tips-home {
+  font-size: 38px;
+  color: transparent;
+  user-select: none;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  overflow: visible;
+  vertical-align: top;
+  font-style: normal;
+  height: 1em;
+  width: 1em;
+  mix-blend-mode: multiply;
+  background: linear-gradient(90deg, #ffffff 0%, #ffffff 12.5%, transparent 12.5%, transparent 87.5%, #ffffff 87.5%),
+              linear-gradient(0deg, transparent 0%, transparent 50%, var(--tips_color_1) 50%, var(--tips_color_1) 62.5%, transparent 62.5%),
+              linear-gradient(90deg, transparent 0%, transparent 43.75%, #ffffff 43.75%, #ffffff 56.25%, transparent 56.25%),
+              linear-gradient(0deg, #ffffff 0%, #ffffff 12.5%, var(--tips_color_0) 12.5%, var(--tips_color_0) 62.5%, transparent 62.5%);
+}
+#tips-home:before {
+  background-color: #ffffff;
+  border-color: transparent transparent var(--tips_color_0) transparent;
+  border-style: solid;
+  border-width: 0 0.5em 0.375em 0.5em;
+  box-sizing: border-box;
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0.05em;
+}
+#tips-home-a
+{
+    color: var(--tips_color_0);
+    font-family: "Times New Roman", Times, serif;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 5px;
+    text-align: center;
+    text-decoration: none;
+}
+#tips-home-a a
+{
+    color: var(--tips_color_0);
+}
+
+/* ----- Tips Author and Date Block ----- */
+#tips-ad-table
+{
+    background: #FFFFFF;
+    color: #000000;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: bold;
+    width: 100%
+}
+#tips-ad-table .author-td
+{
+    text-align: left;
+}
+#tips-ad-table .date-td
+{
+    text-align: right;
+}
+#tips-ad-table p
+{
+    color: var(--tips_color_2);
+}
+
+/* ----- Tips Horizontal Line ----- */
+.tips-line-hr
+{
+    color: var(--tips_color_0);
+    border: 2px solid var(--tips_color_0);
+}
+
+/* ----- Tips Paragraph Block ----- */
+#tips-para-div
+{
+    background: #FFFFFF;
+    color: var(--tips_color_2);
+    font-family: "Times New Roman", Times, serif;
+    font-size: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+    text-align: justify;
+}
+
+/* ----- Tips Line with Rounded Rectangle ----- */
+#tips-line {
+    background-color: var(--tips_color_0);
+    height: 4px;
+    margin: 10px auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    position: relative;
+    width: 100%;
+}
+.tips-cap
+{
+    align-items: center;
+    background: var(--tips_color_0);
+    border-radius: 15px;
+    box-shadow: 2px 2px 1px grey;
+    color: #ffffff;
+    display: flex;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 18px;
+    font-weight: bold;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
 }
 
 /* ============================================================================================== */
